# smartos-ui

./: .gitignore  Cargo.toml  Jenkinsfile  Makefile  README.md  rustfmt.toml
executor/: Cargo.toml
executor/src/: lib.rs  main.rs
executor/src/endpoints/: config.rs  image.rs  instance.rs  mod.rs  nictag.rs  pwhash.rs  sysinfo.rs
shared/: Cargo.toml
shared/src/: config.rs  http_server.rs  image.rs  instance.rs  lib.rs  nictag.rs  serde_helpers.rs  sysinfo.rs
shared/tests/: serde_helpers.rs
smf/manifests/: executor.xml  smartos-ui-executor.xml  smartos-ui.xml  ui.sh  ui.xml
test/data/: config  nictagadm.txt  shadow  sysinfo.json
test/data/imgadm/: 3277be68-9109-11ed-a9ba-00151714048c.json  d6643b5c-a027-446c-8280-29144a4e16ca.json  d89041d8-41b9-481d-918a-722be4598dd1.json  e44ed3e0-910b-11ed-a5d4-00151714048c.json  list.json  sources.json
test/data/vmadm/: 509f142f-f8ac-43fa-b5b8-c41fe238ff7d.json  b990f39c-0619-4975-85b2-2442115bc0d8.json  d11dbea9-cb8f-4415-9c21-3c5e48e55ea2.json  list.txt
test/data/vminfod/: 509f142f-f8ac-43fa-b5b8-c41fe238ff7d.json  b990f39c-0619-4975-85b2-2442115bc0d8.json  d11dbea9-cb8f-4415-9c21-3c5e48e55ea2.json  vms.json
test/mock/: imgadm  nictagadm  sysinfo  vmadm  vminfod
tools/: devrun.sh  gzrun.sh  ui-manta-installer.sh  ui.sh  uiadm.sh
ui/: Cargo.toml  build.rs
ui/assets/: codemirror.mjs  dashboard-nav.js  global.js  htmx-extensions.js  input.css  json-enc-typed.js  json-viewer.js  main.in.css  main.in.js  package-lock.json  package.json  playwright.config.js  provision.in.js  provision.js  tableFilter.js  tailwind.config.js
ui/assets/tests/: config.json  first-run.spec.js  images.spec.js  provision.hvm.spec.js  provision.native.spec.js
ui/assets/tests/models/: AvailableImagesPage.js  DashboardPage.js  ImagePage.js  ImagesPage.js  InstanceBhyvePage.js  InstanceHvmPage.js  InstanceJoyentMinimalPage.js  InstanceJoyentPage.js  InstanceKvmPage.js  InstanceLxPage.js  InstanceNativePage.js  InstancePage.js  InstancesPage.js  LoginPage.js  Page.js  ProvisionPage.js
ui/src/: clients.rs  exec.rs  lib.rs  main.rs  privilege.rs  session.rs
ui/src/endpoints/: assets.rs  config.rs  dashboard.rs  filters.rs  images.rs  instances.rs  login.rs  mod.rs
ui/templates/: create_result.j2  dashboard-hx.j2  dashboard.j2  gz_config.j2  icons.j2  image.j2  images-hx.j2  images.j2  import.j2  instance-create-hx.j2  instance-create.j2  instance-hx.j2  instance.j2  instances-hx.j2  instances.j2  layout.j2  login.j2  modal.j2  notification.j2  provision.j2  validate.j2  validate_create_result.j2
ui/templates/include/: image-list.j2  instance-create-form.j2  instance-detail.j2  instance-list.j2  instance_connection_info.j2  instance_generic.j2  instance_header.j2  instance_hvm.j2  instance_lx.j2  instance_native.j2  json_viewer.j2  no_images.j2  no_instances.j2  sysinfo.j2
ui/templates/layout/: authed.j2  hx.j2  main.j2
ui/templates/macros/: icons.j2  inputs.j2
