[package]
name = "smartos_ui_executor"
version = "0.1.19"
homepage = "https://github.com/tritondatacenter/smartos-ui"
description = "SmartOS UI Executor"
edition = "2021"
repository = "https://github.com/tritondatacenter/smartos-ui"
license = "MPL-2.0"
authors = [
    "MNX Cloud (mnx.io)"
]

[dependencies]
dropshot = "0.10"
tokio = {  version = "1.35", features = ["full"] }
slog = "2.7"
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["url"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
smartos_shared = { path = "../shared" }
http = "0.2"
