[package]
name = "smartos_shared"
version = "0.1.0"
homepage = "https://github.com/tritondatacenter/smartos_ui"
description = "SmartOS UI shared structs and functions"
edition = "2021"
repository = "https://github.com/tritondatacenter/smartos_ui"
license = "MPL-2.0"
authors = [
    "MNX Cloud (mnx.io)"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"