[package]
name = "smartos_shared"
version = "0.1.20"
homepage = "https://github.com/tritondatacenter/smartos-ui"
description = "SmartOS UI shared structs and functions"
edition = "2021"
repository = "https://github.com/tritondatacenter/smartos-ui"
license = "MPL-2.0"
authors = [
    "MNX Cloud (mnx.io)"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["url"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
url = { version = "2.5", features = ["serde"] }
dropshot = "0.10"
hyper = "0.14"
http = "0.2"
slog = "2.7"
