[package]
name = "smartos_ui"
version = "0.1.0"
homepage = "https://github.com/tritondatacenter/smartos_ui"
description = "SmartOS UI"
edition = "2021"
repository = "https://github.com/tritondatacenter/smartos_ui"
license = "MPL-2.0"
authors = [
    "MNX Cloud (mnx.io)"
]

[dependencies]
tokio = "1.35"
hyper = "0.14"
dropshot = "0.9"
slog = "2.7"
schemars = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
nanoid = "0.4"
askama = "0.12"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
privdrop = "0.5"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
smartos_shared = { path = "../shared" }
http = "0.2.11"
pwhash = "0.2"

[target.'cfg(target_os = "illumos")'.dependencies]
illumos-priv = "0.2.0"